@@ -16,6 +16,9 @@
 # Deterministic wallet type. 4 is HD Wallet. Default is 3.
 #type=3
 
+# HD wallet type: 0 - hardened private key derivation, 1 - regular (e.g. Electrum compatible)
+#hdwaltype=0
+
 # Hex encoded secret value for Type-2 deterministic wallet.
 # When not specified, it gets calculated from seed password.
 # The value is ignored for wallets of type different than 2.
